syntax = "proto3";
package k1s0.system.common.v1;

message Pagination {
  int32 page = 1;
  int32 page_size = 2;
}

message PaginationResult {
  int32 total_count = 1;
  int32 page = 2;
  int32 page_size = 3;
  bool has_next = 4;
}

message Timestamp {
  int64 seconds = 1;
  int32 nanos = 2;
}
